--- a/main/payments/templates/checkout.html
+++ b/main/payments/templates/checkout.html
@@ -179,15 +179,15 @@ home-style3 sin-prod-pg-1
                                   </div>
                                   <div class="d-flex justify-content-between py-2">
                                       <span>جمع قیمت محصولات</span>
-                                      <span>1،737.00 تومان</span>
+                                      <span id="product-total" data-price="1500000"> 1500000 تومان</span>
                                   </div>
                                   <div class="d-flex justify-content-between py-2">
                                       <span>هزینه ارسال</span>
-                                      <span class="color-red1">+ 9.50 تومان</span>
+                                      <span id="shipping-fee" data-fee="25000" class="color-red1">25000 تومان</span>
                                   </div>
                                   <div class="total d-flex justify-content-between py-3 fsz-16 fw-bold border-top">
                                       <span>مبلغ قابل پرداخت</span>
-                                      <span class="color-green2">1،746.50 تومان</span>
+                                      <span id="payable-amount" class="color-green2"></span>
                                   </div>
                               </div>
                           </div>
