--- a/main/assets/common/css/lib/bootstrap.min.rtl.css
+++ b/main/assets/common/css/lib/bootstrap.min.rtl.css
@@ -4789,12 +4789,12 @@ fieldset:disabled .btn {
     box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .125)
 }
 
-.accordion-button:not(.collapsed)::after {
+.accordion-button.group:not(.collapsed)::after {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%230c63e4'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
     transform: rotate(180deg)
 }
 
-.accordion-button::after {
+.accordion-button.group::after {
     flex-shrink: 0;
     width: 1.25rem;
     height: 1.25rem;
@@ -4829,7 +4829,7 @@ fieldset:disabled .btn {
 
 .accordion-item {
     background-color: #fff;
-    border: 1px solid rgba(0, 0, 0, .125)
+    border: none;
 }
 
 .accordion-item:first-of-type {
